--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@nuxt/ui": "^3.2.0",
     "@nuxtjs/i18n": "^9.5.6",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@pinia/nuxt": "^0.11.1",
     "eslint": "^9.30.1",
     "nuxt": "^3.17.6",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.4.1",
     "typescript": "^5.8.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
