--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/i18n": "^9.5.6",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.1",
+    "@vueuse/motion": "^3.0.3",
     "eslint": "^9.30.1",
     "nuxt": "^3.17.6",
     "pinia": "^3.0.3",
