--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "nuxt": "^3.17.6",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
+    "socket.io-client": "^4.8.1",
     "typescript": "^5.8.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/socket.io-client": "^1.4.36",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
